<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_submit_purity_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="site.gitinitdone.h2go.controller.SubmitPurityReportActivity"
    tools:showIn="@layout/activity_submit_purity_report">

    <ProgressBar
        android:id="@+id/submit_purity_report_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="15dp"
        android:text="@string/submit_purity_report"
        android:textSize="11pt"
        android:id="@+id/formTitleSubmitPurityReport"
        />

    <!-- Location -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/formTitleSubmitPurityReport"
        android:layout_alignEnd="@id/formTitleSubmitPurityReport"
        android:layout_below="@id/formTitleSubmitPurityReport"
        android:layout_marginTop="15dp"
        android:text="@string/location_positive_negative"
        android:textStyle="bold"
        android:textSize="9pt"
        android:id="@+id/locationTitle"
        />

    <!-- Latitude -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/locationTitle"
        android:layout_alignEnd="@id/locationTitle"
        android:layout_below="@id/locationTitle"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:text="@string/latitude_north_south"
        android:textSize="8pt"
        android:id="@+id/latitudeTitle"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/locationLat"
        android:layout_below="@id/latitudeTitle"
        android:layout_alignStart="@id/latitudeTitle"
        android:layout_alignEnd="@id/latitudeTitle"/>

    <!-- Longitude -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/locationLat"
        android:layout_alignEnd="@id/locationLat"
        android:layout_below="@id/locationLat"
        android:layout_marginTop="15dp"
        android:text="@string/longitude_east_west"
        android:textSize="8pt"
        android:id="@+id/longitudeTitle"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/locationLong"
        android:layout_below="@id/longitudeTitle"
        android:layout_alignStart="@id/longitudeTitle"
        android:layout_alignEnd="@id/longitudeTitle"/>


    <!-- current location button -->
    <Button
        android:id="@+id/useCurrentLocationPurityReport"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/locationLong"
        android:layout_alignParentEnd="true"
        android:text="@string/use_current_location" />

    <!-- Water Condition -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/useCurrentLocationPurityReport"
        android:layout_alignStart="@id/locationTitle"
        android:layout_alignEnd="@id/locationTitle"
        android:layout_marginTop="15dp"
        android:text="@string/water_condition"
        android:textStyle="bold"
        android:textSize="8pt"
        android:id="@+id/labelWaterConditionSpinner"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelWaterConditionSpinner"
        android:ems="10"
        android:layout_alignStart="@id/labelWaterConditionSpinner"
        android:layout_alignEnd="@id/labelWaterConditionSpinner"
        android:id="@+id/overallConditionSpinner" />

    <!-- Virus PPM -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/labelWaterConditionSpinner"
        android:layout_alignEnd="@id/labelWaterConditionSpinner"
        android:layout_below="@id/overallConditionSpinner"
        android:layout_marginTop="15dp"
        android:text="@string/virus_ppm"
        android:textStyle="bold"
        android:textSize="8pt"
        android:id="@+id/labelVirus"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="6"
        android:id="@+id/virusPPMNumber"
        android:layout_below="@id/labelVirus"
        android:layout_alignStart="@id/labelVirus"
        android:layout_alignEnd="@id/labelVirus"/>



    <!-- Contaminant PPM -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/virusPPMNumber"
        android:layout_alignEnd="@id/virusPPMNumber"
        android:layout_below="@id/virusPPMNumber"
        android:layout_marginTop="15dp"
        android:text="@string/contaminant_ppm"
        android:textStyle="bold"
        android:textSize="8pt"
        android:id="@+id/labelContaminant"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="6"
        android:id="@+id/contaminantPPMNumber"
        android:layout_below="@id/labelContaminant"
        android:layout_alignStart="@id/labelContaminant"
        android:layout_alignEnd="@id/labelContaminant"/>


    <!-- submit button -->
    <Button
        android:id="@+id/submitButtonWaterPurityReport"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:onClick="submitPurityReport"
        android:text="@string/submit" />


</RelativeLayout>
