...
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="action_settings">settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="submit_report">Submit a Report</string>
    <string name="water_locations">Water Locations</string>
    <string name="history">History</string>

    <string name="submit_source_report">Submit a Water Source Report</string>
    <string name="submit_purity_report">Submit a Water Purity Report</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_source_report_list">SourceReportListActivity</string>
    <string name="title_activity_map_view">Map</string>
    <string name="title_activity_submit_purity_report">SubmitPurityReportActivity</string>
...
    <string name="empty_reports_toast">No reports are in the system.</string>
    <string name="username_validation">Username is too short.</string>
    <string name="password_validation">Password is too short.</string>
    <string name="register_success">User has been registered. Please log in.</string>
    <string name="register_duplicate">That username is already taken.</string>
    <string name="register_error">There was an error during registration.</string>
    <string name="purity_report_success">Purity Report has been successfully submitted.</string>
    <string name="purity_report_error">There was an error during submission.</string>
    <string name="soure_report_success">Source Report has been successfully submitted.</string>
    <string name="source_report_error">There was an error during submission.</string>
    <string name="edit_user_profile">Edit User Profile:</string>
    <string name="title">Title:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
...
    <string name="virus">Virus</string>
    <string name="contaminant">Contaminant</string>
    <string name="year">Year</string>
    <string name="view_graph">View graph</string>
    <string name="purity_graph">Purity Graph</string>
    <string name="list_of_purity_reports">List of Purity Reports</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="type_of_user">Type of User:</string>
    <string name="list_of_source_reports">List of Source Reports</string>
    <string name="water_condition">Water Condition</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="submit">Submit</string>
...
