<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_submit_source_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="site.gitinitdone.h2go.controller.SubmitSourceReportActivity"
    tools:showIn="@layout/activity_submit_source_report">

    <ProgressBar
        android:id="@+id/submit_source_report_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="15dp"
        android:text="@string/submit_source_report"
        android:textSize="11pt"
        android:id="@+id/formTitleSubmitSourceReport"
        />

    <!-- Location -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/formTitleSubmitSourceReport"
        android:layout_alignEnd="@id/formTitleSubmitSourceReport"
        android:layout_below="@id/formTitleSubmitSourceReport"
        android:layout_marginTop="15dp"
        android:text="@string/location_positive_negative"
        android:textStyle="bold"
        android:textSize="9pt"
        android:id="@+id/locationTitle"
        />

    <!-- Latitude -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/locationTitle"
        android:layout_alignEnd="@id/locationTitle"
        android:layout_below="@id/locationTitle"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:text="@string/latitude_north_south"
        android:textSize="8pt"
        android:id="@+id/latitudeTitle"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/locationLat"
        android:layout_below="@id/latitudeTitle"
        android:layout_alignStart="@id/latitudeTitle"
        android:layout_alignEnd="@id/latitudeTitle"/>

    <!-- Longitude -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/locationLat"
        android:layout_alignEnd="@id/locationLat"
        android:layout_below="@id/locationLat"
        android:layout_marginTop="15dp"
        android:text="@string/latitude_north_south"
        android:textSize="8pt"
        android:id="@+id/longitudeTitle"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/locationLong"
        android:layout_below="@id/longitudeTitle"
        android:layout_alignStart="@id/longitudeTitle"
        android:layout_alignEnd="@id/longitudeTitle"/>

    <!-- current location button -->
    <Button
        android:id="@+id/useCurrentLocationSourceReport"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/locationLong"
        android:layout_alignParentEnd="true"
        android:text="@string/use_current_location" />

    <!-- Water Type -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/useCurrentLocationSourceReport"
        android:layout_alignStart="@id/locationTitle"
        android:layout_alignEnd="@id/locationTitle"
        android:layout_marginTop="15dp"
        android:text="@string/water_type"
        android:textStyle="bold"
        android:textSize="8pt"
        android:id="@+id/labelWaterTypeSpinner"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelWaterTypeSpinner"
        android:ems="10"
        android:layout_alignStart="@id/labelWaterTypeSpinner"
        android:layout_alignEnd="@id/labelWaterTypeSpinner"
        android:id="@+id/waterTypeSpinner" />

    <!-- Water Condition -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/waterTypeSpinner"
        android:layout_alignStart="@id/waterTypeSpinner"
        android:layout_alignEnd="@id/waterTypeSpinner"
        android:layout_marginTop="15dp"
        android:text="@string/water_condition"
        android:textStyle="bold"
        android:textSize="8pt"
        android:id="@+id/labelWaterConditionSpinner"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelWaterConditionSpinner"
        android:ems="10"
        android:layout_alignStart="@id/labelWaterConditionSpinner"
        android:layout_alignEnd="@id/labelWaterConditionSpinner"
        android:id="@+id/waterConditionSpinner" />


    <!-- submit button -->
    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:id="@+id/submitButtonWaterSourceReport"
        android:layout_alignParentBottom="true"
        android:onClick="submitSourceReport"/>



</RelativeLayout>
